fix(create): business-form width overflow

--- a/components/create-business-form/create-business-form.module.css
+++ b/components/create-business-form/create-business-form.module.css
@@ -4,6 +4,8 @@
   justify-content: space-between;
   height: 75px;
   max-width: 375px;
+  width: 99%;
+  margin: 0 auto;
 }
 
 .btn {
